# probable-rotary-phone

./: FIX-NOTES.md  GITHUB-MAC-BUILD.md  README.md  package.json
.github/workflows/: build-macos.yml
public/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
