[package]
name = "shot-list-maker"
version = "1.5.1"
description = "Offline shot list and storyboard maker"
authors = ["Shot List Studio"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "shot_list_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
